--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -18,7 +18,7 @@
   "analytics_engine_datasets": [
     {
       "binding": "ANALYTICS",
-      "dataset": "sinkhooks"
+      "dataset": "sink"
     }
   ],
   "kv_namespaces": [
